--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -36,7 +36,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./proyecto/mutmut_html
+        publish_dir: ./proyecto/html
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
         commit_message: 'Update Mutant Testing Report'
