--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -19,29 +21,23 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install mutmut pytest
+        pip install mutmut==2.0.0
+        pip install pytest
         pip install -r proyecto/requirements.txt
 
-    - name: Run Mutmut
+    - name: Run mutmut
+      continue-on-error: true
       run: |
         cd proyecto
-        mutmut run --paths-to-mutate classes/ --report
-        mutmut html
-
-    - name: Verify HTML Report
-      run: |
-        cd proyecto
-        ls -l html || echo "No HTML directory found"
-        pwd
-        find . -name "html"
+        mutmut run --paths-to-mutate classes/ --verbose
+        mutmut html --verbose
+        ls -l  # Listar contenidos para verificar
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./proyecto/html
-        keep_files: false
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
         commit_message: 'Update Mutant Testing Report'
