--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -35,6 +35,7 @@ jobs:
       continue-on-error: true
       run: |
         cd proyecto
+        cd mutmut
         mutmut html
 
     - name: Deploy to GitHub Pages
