--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -35,7 +35,6 @@ jobs:
       continue-on-error: true
       run: |
         cd proyecto
-        cd mutmut
         mutmut html
 
     - name: Deploy to GitHub Pages
@@ -43,6 +42,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./proyecto/html
+        destination_dir: reporte-mutantes
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
         commit_message: 'Update Mutant Testing Report'
